Fixed spacing around the footer

--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -1,9 +1,9 @@
 /* Footer set at the bottom in Layout.tsx - https: //philipwalton.github.io/solved-by-flexbox/demos/sticky-footer/ */
 .footer {
 	height: var(--footer-height, 60px);
-	margin-top: rem(120px);
+	margin-top: rem(30px);
 	border-top: rem(1px) solid light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-5));
-	z-index: 200;
+	z-index: 1;
 	position: relative;
 	width: 100%;
 	bottom: 0;
